Fixed menu on all pages

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                                 <li><a href="tech-talks">Tech Talks</a></li>
                             </ul>
                         </li>
+                        <li><a href="coach-worden">Coach worden?</a></li>
                         <li><a href="contact">Contact</a></li>
                     </ul>
                 </nav>
@@ -94,6 +95,7 @@
         </div>
     </div>
 </header>
+
 
 <div class="row row-padding">
     <div class="col-10 offset-1 col-md-10 offset-md-1">
