--- a/contact.html
+++ b/contact.html
@@ -88,6 +88,7 @@
                                 <li><a href="tech-talks">Tech Talks</a></li>
                             </ul>
                         </li>
+                        <li><a href="coach-worden">Coach worden?</a></li>
                         <li><a href="contact">Contact</a></li>
                     </ul>
                 </nav>
@@ -95,6 +96,7 @@
         </div>
     </div>
 </header>
+
 
 <main class="container">
     <div class="row">
