Fixed feedback Thomas

--- a/coach-worden.html
+++ b/coach-worden.html
@@ -113,7 +113,7 @@
                             te leiden? Niet vóór de klas, maar in de klas. <br/><br/>
                             Studenten motiveren, inspireren en activeren zodat ze elke dag een beetje beter
                             naar huis gaan. Beter leren coachen zodat je dit ook binnen je eigen werk kan toepassen.
-                            Lastige concepten uitleggen, streng zijn en daarnaast een informele band met ze opbouwen.
+                            Lastige concepten uitleggen, een informele band met de studenten opbouwen en zo af en toe streng zijn.
                             Klinkt als iets voor jou?
                         </p>
                     </div>
@@ -211,7 +211,7 @@
                     <p class="item"><span class="dot"></span>Vaste trainingsmomenten om je didactische vaardigheden bij
                         te spijkeren *</p>
                     <p class="item"><span class="dot"></span>Wekelijkse checkins om de gang van zaken te bespreken</p>
-                    <p class="item"><span class="dot"></span>Samen met je huidige werkgever persoonlijke ontwikkeldoelen afspreken</p>
+                    <p class="item"><span class="dot"></span>Jouw vaardigheden verder ontwikkelen in afstemming met je huidige werkgever</p>
                 </div>
 
                 <div class="subtext">* deze vaardigheden kan je naast het coachen natuurlijk ook toepassen tijdens je eigen werk. Een student in
