Updated with feedback

--- a/coach-worden.html
+++ b/coach-worden.html
@@ -144,8 +144,8 @@
                             studenten
                             zoeken zelf een plekje en gaan alvast aan de slag. Om 09:30 komen alle studenten bij elkaar
                             in één van de grote
-                            ruimtes en starten we gezamenlijk de dag. Je behandeld iets actueels uit de software wereld om
-                            de studenten te inspireren met toffe nieuwe tech. Of je behandeld een nieuw programmeer concept.
+                            ruimtes en starten we gezamenlijk de dag. Je behandelt iets actueels uit de softwarewereld om
+                            de studenten te inspireren met toffe nieuwe tech. Of je behandelt een nieuw programmeer concept.
                             <br/><br/>Om 09:45 rond je af en gaat iedereen weer lekker aan
                             het werk.
                             Gedurende
@@ -175,7 +175,7 @@
                         <h2 class="pb-4">Jouw eigenschappen</h2>
                         <div class="counted">
                             <p class="item"><span class="dot">1</span>Je werkt met passie in de IT</p>
-                            <p class="item"><span class="dot">2</span>Je bent een held met veel IT kennis (PHP of vergelijkbare taal, Databases,
+                            <p class="item"><span class="dot">2</span>Je bent een held met veel IT kennis (Verschillende programmeer talen, Databases,
                                 JavaScript, HTML / CSS)</p>
                             <p class="item"><span class="dot">3</span>Je kan complexe concepten eenvoudig uitleggen</p>
                             <p class="item"><span class="dot">4</span>Je vindt het heerlijk om op een whiteboard te tekenen</p>
@@ -185,6 +185,7 @@
                                 samenwerken.</p>
                             <p class="item"><span class="dot">8</span>Je werkt samen met de andere coaches en deelt de
                                 kennis die je opdoet zodat we samen beter worden.</p>
+                            <p class="item"><span class="dot">9</span>Je bent minimaal 1 vaste dag per week beschikbaar.</p>
                         </div>
                     </div>
                 </div>
@@ -210,12 +211,11 @@
                     <p class="item"><span class="dot"></span>Een leuk enthousiast team!</p>
                     <p class="item"><span class="dot"></span>Vaste trainingsmomenten om je didactische vaardigheden bij
                         te spijkeren *</p>
-                    <p class="item"><span class="dot"></span>Wekelijkse checkins om de gang van zaken te bespreken</p>
+                    <p class="item"><span class="dot"></span>Wekelijkse checkins om te helpen bij je persoonlijke groei</p>
                     <p class="item"><span class="dot"></span>Jouw vaardigheden verder ontwikkelen in afstemming met je huidige werkgever</p>
                 </div>
 
-                <div class="subtext">* deze vaardigheden kan je naast het coachen natuurlijk ook toepassen tijdens je eigen werk. Een student in
-                de mee-werkmodus krijgen werkt namelijk ook op die lastige collega. </div>
+                <div class="subtext">* deze vaardigheden kan je naast het coachen natuurlijk ook toepassen tijdens je eigen werk. </div>
             </div>
             <div class="col-12 col-md-5 offset-md-1 col-md-middle pt-4">
                 <img src="/images/offer.svg" alt="Eigen pad">
