--- a/coach-worden.html
+++ b/coach-worden.html
@@ -248,7 +248,7 @@
                     <div class="col-12 col-md-6">
                         <a class="typeform-share btn px-md-0 p-3 w-md-100" href="https://form.typeform.com/to/jEA7cenb"
                            data-mode="drawer_right"
-                           target="_blank"><span>Wordt onze nieuwe collega!</span></a>
+                           target="_blank"><span>Word onze nieuwe collega!</span></a>
                     </div>
                 </div>
             </div>
