added upskill link to header

--- a/contact.html
+++ b/contact.html
@@ -89,6 +89,7 @@
                             </ul>
                         </li>
                         <li><a href="coach-worden">Coach worden?</a></li>
+                        <li><a target="_blank" href="https://upskill.bit-academy.nl">Upskill</a></li>
                         <li><a href="contact">Contact</a></li>
                     </ul>
                 </nav>
