--- a/tech-talks.html
+++ b/tech-talks.html
@@ -88,6 +88,7 @@
                             </ul>
                         </li>
                         <li><a href="coach-worden">Coach worden?</a></li>
+                        <li><a target="_blank" href="https://upskill.bit-academy.nl">Upskill</a></li>
                         <li><a href="contact">Contact</a></li>
                     </ul>
                 </nav>
@@ -95,7 +96,6 @@
         </div>
     </div>
 </header>
-
 
 <main class="container">
     <div class="row">
