Added praktische informatie

--- a/index.html
+++ b/index.html
@@ -308,6 +308,30 @@
     </div>
 </div>
 
+
+
+<div class="row row-padding">
+    <div class="col-10 offset-1 col-md-10 offset-md-1">
+        <div class="row paths-container">
+            <div class="col-12 col-md-6 order-md-last col-md-middle">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="pb-4">Praktische zaken</h2>
+                        <p>Je schrijft je in bij het ROC van Amsterdam of het Horizon College. Via deze college's
+                        kan je bij de Bit Academy terecht komen. Je betaald dus gewoon regulier schoolgeld. Aan de Bit
+                        Academy zitten geen extra kosten verbonden. <br/><br/>
+                        Na 3 jaar krijg je van deze college's je diploma. Vanuit de Bit Academy krijg je een extra
+                        certificaat waarmee je aan je toekomstige werkgever kan laten zien dat je extra goed bent. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-md-middle">
+                <img src="/images/money.svg" alt="Eigen pad" style="max-height: 350px;">
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="row row-padding" data-aos="fade-left" data-aos-offset="500" data-aos-once="true">
     <div class="col-10 offset-1 col-md-10 offset-md-1">
         <div class="row">
