Fixed some typo's

--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
                 <div class="row">
                     <div class="col-12">
                         <h2 class="pb-4">Praktische zaken</h2>
-                        <p>Je schrijft je in bij het ROC van Amsterdam of het Horizon College. Via deze college's
-                        kan je bij de Bit Academy terecht komen. Je betaald dus gewoon regulier schoolgeld. Aan de Bit
+                        <p>Je schrijft je in bij het ROC van Amsterdam of het Horizon College. Via deze colleges
+                        kan je bij de Bit Academy terecht komen. Je betaalt dus gewoon regulier schoolgeld. Aan de Bit
                         Academy zitten geen extra kosten verbonden. <br/><br/>
-                        Na 3 jaar krijg je van deze college's je diploma. Vanuit de Bit Academy krijg je een extra
+                        Na 3 jaar krijg je van deze colleges je diploma. Vanuit de Bit Academy krijg je een extra
                         certificaat waarmee je aan je toekomstige werkgever kan laten zien dat je extra goed bent. </p>
                     </div>
                 </div>
