--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="col-12 pt-2">
                         <p>
                             Binnen 3 jaar een volwaardig MBO diploma, werken met de nieuwste
-                            technology en zelf je studie richting kiezen. Je kiest er voor om
+                            tech en zelf je studie richting kiezen. Je kiest er voor om
                             Embedded Engineer te worden, Game Developer of Software Developer.
                             Leren door zelf actief bezig te zijn, individueel opdrachten te
                             doen of samen te werken in teams.
