added signup dialog

--- a/index.html
+++ b/index.html
@@ -124,9 +124,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-xl-4 col-lg-4 col-md-6 pt-3">
-                        <a href="https://www.rocva.nl/MBO-onderwijs/Sectoren/ICT/Software-Developer-op-de-Bit-Academy"
-                           target="_blank" rel="nofollow"
-                           class="btn px-md-0 w-md-100"><span>Meld je aan!</span></a>
+                        <button class="btn px-md-0 w-md-100" data-toggle="modal" data-target="#aanmeldModal"><span>Meld je aan!</span></button>
                     </div>
                 </div>
             </div>
@@ -317,7 +315,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h2 class="pb-4">Praktische zaken</h2>
-                        <p>Je schrijft je in bij het ROC van Amsterdam of het Horizon College. Via deze colleges
+                        <p>Je schrijft je in bij het ROC van Amsterdam, het Horizon College of Noorderpoort. Via deze colleges
                         kan je bij de Bit Academy terecht komen. Je betaalt dus gewoon regulier schoolgeld. Aan de Bit
                         Academy zitten geen extra kosten verbonden. <br/><br/>
                         Na 3 jaar krijg je van deze colleges je diploma. Vanuit de Bit Academy krijg je een extra
@@ -403,6 +401,7 @@
 </footer>
 
 <script src="js/jquery-2.2.4.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/app.js"></script>
 <script src="js/aos.js"></script>
 <script>
@@ -430,6 +429,56 @@
 <noscript><iframe src=“https://www.googletagmanager.com/ns.html?id=GTM-PH52CSK”
                   height=“0" width=“0” style=“display:none;visibility:hidden”></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+
+<div class="modal fade" id="aanmeldModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Kies je vestiging 🚀</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="card-deck">
+                    <div class="card">
+                        <img src="/images/science-park.png" class="card-img-top" alt="Science Park">
+                        <div class="card-body">
+                            <h5 class="card-title">ROC van Amsterdam</h5>
+                            <p class="card-text">Op het innovative Science Park in Amsterdam, omringt door universiteiten en start-ups. </p>
+                            <a href="https://www.rocva.nl/MBO-onderwijs/Sectoren/ICT/Software-Developer-op-de-Bit-Academy"
+                               target="_blank" rel="nofollow"
+                               class="btn w-md-100 mt-3"><span>Meld je aan!</span></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/images/h20.png" class="card-img-top" alt="H20 Esports Centre">
+                        <div class="card-body">
+                            <h5 class="card-title">Horizon College</h5>
+                            <p class="card-text">Op de H20 Esports Campus in Purmerend, gedreven door e-sports en creative tech.</p>
+                            <a href="https://www.horizoncollege.nl/opleidingen/software-developer/"
+                               target="_blank" rel="nofollow"
+                               class="btn w-md-100 mt-3"><span>Meld je aan!</span></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/images/kasteel.png" class="card-img-top" alt="Het Kasteel">
+                        <div class="card-body">
+                            <h5 class="card-title">Noorderpoort</h5>
+                            <p class="card-text">In het Kasteel in Groningen, waar groei en tech perfect samen komen.</p>
+                            <a href="https://www.noorderpoort.nl/mbo-opleidingen/kunst-en-creatie/software-developer-bit-academy-25604"
+                               target="_blank" rel="nofollow"
+                               class="btn w-md-100 mt-3"><span>Meld je aan!</span></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
 </body>
 
 </html>
