Fixed text on single line

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                         <img src="/images/science-park.png" class="card-img-top" alt="Science Park">
                         <div class="card-body">
                             <h5 class="card-title">ROC van Amsterdam</h5>
-                            <p class="card-text">Op het innovatieve Science Park in Amsterdam, omringt door universiteiten en start-ups. </p>
+                            <p class="card-text">Op het Science Park in Amsterdam, omringt door universiteiten en start-ups. </p>
                             <a href="https://www.rocva.nl/MBO-onderwijs/Sectoren/ICT/Software-Developer-op-de-Bit-Academy"
                                target="_blank" rel="nofollow"
                                class="btn w-md-100 mt-3"><span>Meld je aan!</span></a>
