removed popup, put locations directly into site

--- a/index.html
+++ b/index.html
@@ -122,14 +122,54 @@
                         </p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12 col-xl-4 col-lg-4 col-md-6 pt-3">
-                        <button class="btn px-md-0 w-md-100" data-toggle="modal" data-target="#aanmeldModal"><span>Meld je aan!</span></button>
-                    </div>
-                </div>
             </div>
             <div class="col-12 col-md-5">
                 <img src="/images/2596842.svg" alt="Programmer with multiple languages">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row row-padding">
+    <div class="col-10 offset-1 col-md-10 offset-md-1">
+        <div class="card-deck">
+            <div class="card">
+                <img src="/images/science-park.png" class="card-img-top" alt="Science Park">
+                <div class="card-body">
+                    <h3 class="card-title">Amsterdam</h3>
+                    <p class="card-text">Op het innovatieve Science Park in Amsterdam, omringt door universiteiten en
+                        start-ups. </p>
+                </div>
+                <div class="card-footer">
+                    <a href="https://www.rocva.nl/MBO-onderwijs/Sectoren/ICT/Software-Developer-op-de-Bit-Academy"
+                       target="_blank" rel="nofollow"
+                       class="btn w-md-100 mb-3"><span>Meld je aan!</span></a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="/images/h20.png" class="card-img-top" alt="H20 Esports Centre">
+                <div class="card-body">
+                    <h3 class="card-title">Purmerend</h3>
+                    <p class="card-text">Op de H20 Esports Campus in Purmerend, gedreven door e-sports en creative
+                        tech.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="https://www.horizoncollege.nl/opleidingen/software-developer/"
+                       target="_blank" rel="nofollow"
+                       class="btn w-md-100 mb-3"><span>Meld je aan!</span></a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="/images/kasteel.png" class="card-img-top" alt="Het Kasteel">
+                <div class="card-body">
+                    <h3 class="card-title">Groningen</h3>
+                    <p class="card-text">In het Kasteel in Groningen, waar groei en tech perfect samen komen.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="https://www.noorderpoort.nl/mbo-opleidingen/kunst-en-creatie/software-developer-bit-academy-25604"
+                       target="_blank" rel="nofollow"
+                       class="btn w-md-100 mb-3"><span>Meld je aan!</span></a>
+                </div>
             </div>
         </div>
     </div>
@@ -307,7 +347,6 @@
 </div>
 
 
-
 <div class="row row-padding">
     <div class="col-10 offset-1 col-md-10 offset-md-1">
         <div class="row paths-container">
@@ -315,11 +354,14 @@
                 <div class="row">
                     <div class="col-12">
                         <h2 class="pb-4">Praktische zaken</h2>
-                        <p>Je schrijft je in bij het ROC van Amsterdam, het Horizon College of Noorderpoort. Via deze colleges
-                        kan je bij de Bit Academy terecht komen. Je betaalt dus gewoon regulier schoolgeld. Aan de Bit
-                        Academy zitten geen extra kosten verbonden. <br/><br/>
-                        Na 3 jaar krijg je van deze colleges je diploma. Vanuit de Bit Academy krijg je een extra
-                        certificaat waarmee je aan je toekomstige werkgever kan laten zien dat je extra goed bent. </p>
+                        <p>Je schrijft je in bij het ROC van Amsterdam, het Horizon College of Noorderpoort. Via deze
+                            colleges
+                            kan je bij de Bit Academy terecht komen. Je betaalt dus gewoon regulier schoolgeld. Aan de
+                            Bit
+                            Academy zitten geen extra kosten verbonden. <br/><br/>
+                            Na 3 jaar krijg je van deze colleges je diploma. Vanuit de Bit Academy krijg je een extra
+                            certificaat waarmee je aan je toekomstige werkgever kan laten zien dat je extra goed bent.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -401,7 +443,6 @@
 </footer>
 
 <script src="js/jquery-2.2.4.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
 <script src="js/app.js"></script>
 <script src="js/aos.js"></script>
 <script>
@@ -419,65 +460,26 @@
     })
 })</script>
 <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PH52CSK');</script>
+<script>(function (w, d, s, l, i) {
+    w[l] = w[l] || [];
+    w[l].push({
+        'gtm.start':
+            new Date().getTime(), event: 'gtm.js'
+    });
+    var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+    j.async = true;
+    j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+    f.parentNode.insertBefore(j, f);
+})(window, document, 'script', 'dataLayer', 'GTM-PH52CSK');</script>
 <!-- End Google Tag Manager -->
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src=“https://www.googletagmanager.com/ns.html?id=GTM-PH52CSK”
-                  height=“0" width=“0” style=“display:none;visibility:hidden”></iframe></noscript>
+<noscript>
+    <iframe src=“https://www.googletagmanager.com/ns.html?id=GTM-PH52CSK”
+            height=“0" width=“0” style=“display:none;visibility:hidden”></iframe>
+</noscript>
 <!-- End Google Tag Manager (noscript) -->
-
-<div class="modal fade" id="aanmeldModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Kies je vestiging 🚀</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="card-deck">
-                    <div class="card">
-                        <img src="/images/science-park.png" class="card-img-top" alt="Science Park">
-                        <div class="card-body">
-                            <h5 class="card-title">ROC van Amsterdam</h5>
-                            <p class="card-text">Op het Science Park in Amsterdam, omringt door universiteiten en start-ups. </p>
-                            <a href="https://www.rocva.nl/MBO-onderwijs/Sectoren/ICT/Software-Developer-op-de-Bit-Academy"
-                               target="_blank" rel="nofollow"
-                               class="btn w-md-100 mt-3"><span>Meld je aan!</span></a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/images/h20.png" class="card-img-top" alt="H20 Esports Centre">
-                        <div class="card-body">
-                            <h5 class="card-title">Horizon College</h5>
-                            <p class="card-text">Op de H20 Esports Campus in Purmerend, gedreven door e-sports en creative tech.</p>
-                            <a href="https://www.horizoncollege.nl/opleidingen/software-developer/"
-                               target="_blank" rel="nofollow"
-                               class="btn w-md-100 mt-3"><span>Meld je aan!</span></a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="/images/kasteel.png" class="card-img-top" alt="Het Kasteel">
-                        <div class="card-body">
-                            <h5 class="card-title">Noorderpoort</h5>
-                            <p class="card-text">In het Kasteel in Groningen, waar groei en tech perfect samen komen.</p>
-                            <a href="https://www.noorderpoort.nl/mbo-opleidingen/kunst-en-creatie/software-developer-bit-academy-25604"
-                               target="_blank" rel="nofollow"
-                               class="btn w-md-100 mt-3"><span>Meld je aan!</span></a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-</div>
-
 
 </body>
 
