updated og information on homepage

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                    src="https://www.facebook.com/tr?id=832476150940389&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->
+
+    <meta property="og:title" content="Want to become a programmer?" />
+    <meta property="og:description" content="Binnen 3 jaar een volwaardig MBO diploma, werken met de nieuwste tech en zelf je studie richting kiezen. Je kiest er voor om Embedded Engineer te worden, Game Developer of Software Developer. Leren door zelf actief bezig te zijn, individueel opdrachten te doen of samen te werken in teams." />
+    <meta property="og:image" content="https://www.bit-academy.nl/images/2596842.svg" />
 </head>
 
 <body class="index">
