--- a/coach-worden.html
+++ b/coach-worden.html
@@ -44,6 +44,10 @@
             a.appendChild(r);
         })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
+    <meta property="og:title" content="Studenten inspireren?" />
+    <meta property="og:description" content="Lijkt het jou leuk om naast je vaste baan 1 dag per week de programmeurs van de toekomst op te leiden? Niet vóór de klas, maar in de klas." />
+    <meta name="image" property="og:image" content="https://www.bit-academy.nl/images/ogcoachworden.png">
+
 </head>
 
 <body class="index">
