--- a/events.html
+++ b/events.html
@@ -45,6 +45,9 @@
             a.appendChild(r);
         })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
+    <meta property="og:title" content="Want to become a programmer?" />
+    <meta property="og:description" content="Binnen 3 jaar een volwaardig MBO diploma, werken met de nieuwste tech en zelf je studie richting kiezen. Je kiest er voor om Embedded Engineer te worden, Game Developer of Software Developer. Leren door zelf actief bezig te zijn, individueel opdrachten te doen of samen te werken in teams." />
+    <meta name="image" property="og:image" content="https://www.bit-academy.nl/images/ogimage.png">
 </head>
 
 <body>
