Changed text on homepage

--- a/index.html
+++ b/index.html
@@ -386,9 +386,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h2 class="pb-4">Praktische zaken</h2>
-                        <p>Je schrijft je in bij het ROC van Amsterdam, het Horizon College of Noorderpoort. Via deze
-                            colleges
-                            kan je bij de Bit Academy terecht komen. Je betaalt dus gewoon regulier schoolgeld. Aan de
+                        <p>Je schrijft je in bij het ROC van Amsterdam, het Horizon College of Noorderpoort, met hen sluit je de onderwijs- en praktijkovereenkomst af. De Bit-Academy is de partij die de opleiding daadwerkelijk uitvoert. Je betaalt dus gewoon regulier schoolgeld. Aan de
                             Bit
                             Academy zitten geen extra kosten verbonden. <br/><br/>
                             Na 3 jaar krijg je van deze colleges je diploma. Het MBO college waar je ingeschreven staat
