--- a/feedback.html
+++ b/feedback.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://we-are-bit.typeform.com/to/HZoYZ35I</title>
-<meta http-equiv="refresh" content="0; URL=https://we-are-bit.typeform.com/to/HZoYZ35I">
-<link rel="canonical" href="https://we-are-bit.typeform.com/to/HZoYZ35I">
+<title>Redirecting to https://we-are-bit.typeform.com/to/jBbRDCc7</title>
+<meta http-equiv="refresh" content="0; URL=https://we-are-bit.typeform.com/to/jBbRDCc7">
+<link rel="canonical" href="hhttps://we-are-bit.typeform.com/to/jBbRDCc7">
