updated tech talk link:

--- a/tech-talks.html
+++ b/tech-talks.html
@@ -114,7 +114,7 @@
                             sessie van 30 - 45 minuten waarin de studenten mee op reis worden genomen binnen een
                             onderwerp.</p>
                         <p>
-                            <a href="https://bitstudents.typeform.com/to/bdH8R3" target="_blank" rel="nofollow"
+                            <a href="https://we-are-bit.typeform.com/to/bdH8R3" target="_blank" rel="nofollow"
                                class="btn px-md-0 w-md-100 tech-talk-btn"><span>Ik wil een Tech Talk geven!</span></a>
                         </p>
                     </div>
