added bedankt pagina

--- a/tech-talks.html
+++ b/tech-talks.html
@@ -126,7 +126,7 @@
             </section>
         </div>
     </div>
-    <div class="row tech-talks"">
+    <div class="row tech-talks">
         <div class="col-12 col-md-10 offset-md-1">
             <h2 class="mb-5 mb-md-4 u-hyphens">FAQ</h2>
             <div class="accordion" id="accordionExample">
