--- a/index.html
+++ b/index.html
@@ -67,17 +67,18 @@
         fbq('init', '832476150940389');
         fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none"
-                   src="https://www.facebook.com/tr?id=832476150940389&ev=PageView&noscript=1"
-    /></noscript>
     <!-- End Facebook Pixel Code -->
 
-    <meta property="og:title" content="Want to become a programmer?" />
-    <meta property="og:description" content="Binnen 3 jaar een volwaardig MBO diploma, werken met de nieuwste tech en zelf je studie richting kiezen. Je kiest er voor om Embedded Engineer te worden, Game Developer of Software Developer. Leren door zelf actief bezig te zijn, individueel opdrachten te doen of samen te werken in teams." />
+    <meta property="og:title" content="Want to become a programmer?"/>
+    <meta property="og:description"
+          content="Binnen 3 jaar een volwaardig MBO diploma, werken met de nieuwste tech en zelf je studie richting kiezen. Je kiest er voor om Embedded Engineer te worden, Game Developer of Software Developer. Leren door zelf actief bezig te zijn, individueel opdrachten te doen of samen te werken in teams."/>
     <meta name="image" property="og:image" content="https://www.bit-academy.nl/images/ogimage.png">
 </head>
 
 <body class="index">
+<noscript><img height="1" width="1" style="display:none"
+               src="https://www.facebook.com/tr?id=832476150940389&ev=PageView&noscript=1"
+/></noscript>
 
 <header class="header">
     <div class="looking-for-bit">
@@ -386,7 +387,9 @@
                 <div class="row">
                     <div class="col-12">
                         <h2 class="pb-4">Praktische zaken</h2>
-                        <p>Je schrijft je in bij het ROC van Amsterdam, het Horizon College of Noorderpoort, met hen sluit je de onderwijs- en praktijkovereenkomst af. De Bit-Academy is de partij die de opleiding daadwerkelijk uitvoert. Je betaalt dus gewoon regulier schoolgeld. Aan de
+                        <p>Je schrijft je in bij het ROC van Amsterdam, het Horizon College of Noorderpoort, met hen
+                            sluit je de onderwijs- en praktijkovereenkomst af. De Bit-Academy is de partij die de
+                            opleiding daadwerkelijk uitvoert. Je betaalt dus gewoon regulier schoolgeld. Aan de
                             Bit
                             Academy zitten geen extra kosten verbonden. <br/><br/>
                             Na 3 jaar krijg je van deze colleges je diploma. Het MBO college waar je ingeschreven staat
@@ -495,12 +498,33 @@
         'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
     f.parentNode.insertBefore(j, f);
 })(window, document, 'script', 'dataLayer', 'GTM-PH52CSK');</script>
+
+<!-- Google Tag Manager -->
+<script>(function (w, d, s, l, i) {
+    w[l] = w[l] || [];
+    w[l].push({
+        'gtm.start':
+            new Date().getTime(), event: 'gtm.js'
+    });
+    var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+    j.async = true;
+    j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+    f.parentNode.insertBefore(j, f);
+})(window, document, 'script', 'dataLayer', 'GTM-MFZDMWC');</script>
 <!-- End Google Tag Manager -->
+
 <!-- Google Tag Manager (noscript) -->
 <noscript>
     <iframe src=“https://www.googletagmanager.com/ns.html?id=GTM-PH52CSK”
             height=“0" width=“0” style=“display:none;visibility:hidden”></iframe>
 </noscript>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MFZDMWC"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!-- End Google Tag Manager (noscript) -->
 
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
