updated wie zijn wij + styling

--- a/coach-worden.html
+++ b/coach-worden.html
@@ -125,9 +125,9 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-xl-4 col-lg-4 col-md-6 pt-3">
-                        <a class="typeform-share btn px-md-0 p-3 w-md-100" href="https://form.typeform.com/to/jEA7cenb"
+                        <a class="typeform-share btn px-md-0 p-3" href="https://form.typeform.com/to/jEA7cenb"
                            data-mode="drawer_right"
-                           target="_blank"><span>Loop een keer mee!</span></a>
+                           target="_blank"><span class="px-3">Loop een keer mee!</span></a>
                     </div>
                 </div>
             </div>
@@ -251,9 +251,9 @@
                     </div>
 
                     <div class="col-12 col-md-6">
-                        <a class="typeform-share btn px-md-0 p-3 w-md-100" href="https://form.typeform.com/to/jEA7cenb"
+                        <a class="typeform-share btn px-md-0 p-3" href="https://form.typeform.com/to/jEA7cenb"
                            data-mode="drawer_right"
-                           target="_blank"><span>Word onze nieuwe collega!</span></a>
+                           target="_blank"><span class="px-3">Word onze nieuwe collega!</span></a>
                     </div>
                 </div>
             </div>
