--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 
 <header class="header">
     <div class="looking-for-bit">
-        <p>Looking for Bit? <br/><img src="images/arrow.svg" alt=""></p>
+        <p>Opzoek naar NL Leert door? <br/><img src="images/arrow.svg" alt=""></p>
 
-        <a class="curl" href="https://www.wearebit.com?utm_source=bit-academy.nl&utm_medium=referral">&nbsp;</a>
+        <a class="curl" href="https://nlleertdoor.bit-academy.nl">&nbsp;</a>
     </div>
 
     <div class="row">
