--- a/tech-talks.html
+++ b/tech-talks.html
@@ -53,9 +53,9 @@
 <body>
 <header class="header">
     <div class="looking-for-bit">
-        <p>Looking for Bit? <br/><img src="images/arrow.svg" alt=""></p>
+        <p>Opzoek naar NL Leert door? <br/><img src="images/arrow.svg" alt=""></p>
 
-        <a class="curl" href="https://www.wearebit.com?utm_source=bit-academy.nl&utm_medium=referral">&nbsp;</a>
+        <a class="curl" href="https://nlleertdoor.bit-academy.nl">&nbsp;</a>
     </div>
     <div class="row">
         <div class="col-10 offset-1 col-md-10 offset-md-1 col-sm-10 offset-sm-1">
