--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                 </div>
                 <div class="footer__voorwaarden pt-5">
                     <a href="/assets/Algemene-Voorwaarden-november-2020-1.pdf" target="_blank">Algemene Voorwaarden</a> -
-                    <a href="/assets/NRTO-Gedragscode-consumenten-2013.pdf" target="_blank">Gedragscode</a>
+                    <a href="/assets/NRTO-Gedragscode-consumenten-2013.pdf" target="_blank">NRTO Gedragscode</a>
                 </div>
             </div>
         </div>
